# Newton

./: .gitignore  CMakeLists.txt  README.md  install.ps1
forms/: NewtonPallete.xml  mainwindow.ui  mainwindow.ui.autosave
forms/resources/: DemoFalling.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/forms/: mainwindow.ui
src/resources/: Newton.qrc
tests/: CMakeLists.txt  FirstTest.cpp
